fix hight for Notes on Firefox

--- a/src/components/PersonalData/Notes/Notes.module.css
+++ b/src/components/PersonalData/Notes/Notes.module.css
@@ -46,9 +46,11 @@
     min-height: 70px;
     font-family: "Open Sans", sans-serif;
     font-size: 16px;
-    resize: vertical;
+    resize: none;
+    overflow: hidden;
     padding: 8px;
     scroll-margin-bottom: 150px;
+    field-sizing: content;
 }
 
 .charCount {
@@ -57,5 +59,5 @@
     font-size: 12px;
     line-height: 1.3;
     color: #717680;
-    scroll-margin-bottom: 180px;
+    scroll-margin-bottom: 100px;
 }
